# c4c-pig-vocalizations

./: .gitignore  .vercelignore  Pipfile  README copy.md  README.md  SoundwelDatasetKey.csv  SoundwelDatasetKey.xlsx  context_mapping.csv  main.py  metrics.py  nn_function.py  nn_prep_for_classify.py  overall_nns.py  predict.py  pyproject.toml  requirements.txt  script2_tsne.py  server.py  site_validation_imds.py  soundwel_sound_analysis.ipynb  spectrogram_maker.py  utils.py  vercel.json
api/: upload.py
matlab/: F1.m  NN_function.m  NN_prep_for_classify.m  OverallNNs.m  Script2tSNE.m  SiteValidationIMDS.m  SpectrogramMaker.m  precision.m  recall.m
templates/: index.html
