[project]
name = "pigcallclassifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "librosa>=0.10.2.post1",
    "numpy>=2.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.18.0",
    "tensorflow-cpu>=2.18.0; sys_platform != 'darwin'",
    "uvicorn>=0.34.0",
]
